manifestos-com-problemas/busybox-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: [ "busybox", "sh", "-c" ]
        args: [ "while true; do echo hello world; sleep 10; done" ]
