manifestos-com-problemas/pod-imagepull-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-error-pod
spec:
  containers:
    - name: broken-container
      image: inexistente/imagem:404  # Imagem inválida
      ports:
        - containerPort: 80
