manifestos-com-problemas/serviceaccount-error.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sa-app
  template:
    metadata:
      labels:
        app: sa-app
    spec:
      serviceAccountName: my-service-account  # ServiceAccount está sendo referenciado mas sem a associação de permissões
      containers:
        - name: app-container
          image: nginx
          ports:
            - containerPort: 80
